// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutYouInformationContainer calling setInitialOptions method 1`] = `
<AboutYouInformation
  clasName="sc-cIShpX dVDvCi sc-fYxtnH fCCVQb sc-gGBfsJ RixGJ sc-bbmXgH kaiKft"
  initialValues={
    Object {
      "options1": Array [
        Object {
          "dataLocator": "moreaboutyou-question-parentbtn",
          "id": "shopper1",
          "selected": false,
          "value": "lbl_profile_survey_question1_option1",
        },
        Object {
          "dataLocator": "moreaboutyou-question-grandparentbtn",
          "id": "shopper2",
          "selected": false,
          "value": "lbl_profile_survey_question1_option2",
        },
        Object {
          "dataLocator": "moreaboutyou-question-giftingforothersbtn",
          "id": "shopper3",
          "selected": false,
          "value": "lbl_profile_survey_question1_option3",
        },
        Object {
          "dataLocator": "moreaboutyou-question-prefernottoanswerbtn",
          "id": "shopper4",
          "selected": false,
          "value": "lbl_profile_survey_question1_option4",
        },
      ],
      "options2": Array [
        Object {
          "dataLocator": "moreaboutyou-question-girlbtn",
          "id": "shopper1",
          "selected": false,
          "value": "lbl_profile_survey_question2_option1",
        },
        Object {
          "dataLocator": "moreaboutyou-question-boybtn",
          "id": "shopper2",
          "selected": false,
          "value": "lbl_profile_survey_question2_option2",
        },
        Object {
          "dataLocator": "moreaboutyou-question-toddlergirlbtn",
          "id": "shopper3",
          "selected": false,
          "value": "lbl_profile_survey_question2_option3",
        },
        Object {
          "dataLocator": "moreaboutyou-question-toddlerboybtn",
          "id": "shopper4",
          "selected": false,
          "value": "lbl_profile_survey_question2_option4",
        },
        Object {
          "dataLocator": "moreaboutyou-question-babybtn",
          "id": "shopper5",
          "selected": false,
          "value": "lbl_profile_survey_question2_option5",
        },
      ],
    }
  }
  labels={Object {}}
  onClose={[Function]}
  onSubmit={[Function]}
  setSurveyAnswersAction={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "answer1": "Parent",
            "answer2": "Girl",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  successMessage="Success"
/>
`;

exports[`AboutYouInformationContainer should render correctly 1`] = `
<AboutYouInformation
  clasName="sc-cIShpX dVDvCi sc-fYxtnH fCCVQb sc-gGBfsJ RixGJ sc-bbmXgH kaiKft"
  initialValues={
    Object {
      "options1": Array [
        Object {
          "dataLocator": "moreaboutyou-question-parentbtn",
          "id": "shopper1",
          "selected": false,
          "value": "lbl_profile_survey_question1_option1",
        },
        Object {
          "dataLocator": "moreaboutyou-question-grandparentbtn",
          "id": "shopper2",
          "selected": false,
          "value": "lbl_profile_survey_question1_option2",
        },
        Object {
          "dataLocator": "moreaboutyou-question-giftingforothersbtn",
          "id": "shopper3",
          "selected": false,
          "value": "lbl_profile_survey_question1_option3",
        },
        Object {
          "dataLocator": "moreaboutyou-question-prefernottoanswerbtn",
          "id": "shopper4",
          "selected": false,
          "value": "lbl_profile_survey_question1_option4",
        },
      ],
      "options2": Array [
        Object {
          "dataLocator": "moreaboutyou-question-girlbtn",
          "id": "shopper1",
          "selected": false,
          "value": "lbl_profile_survey_question2_option1",
        },
        Object {
          "dataLocator": "moreaboutyou-question-boybtn",
          "id": "shopper2",
          "selected": false,
          "value": "lbl_profile_survey_question2_option2",
        },
        Object {
          "dataLocator": "moreaboutyou-question-toddlergirlbtn",
          "id": "shopper3",
          "selected": false,
          "value": "lbl_profile_survey_question2_option3",
        },
        Object {
          "dataLocator": "moreaboutyou-question-toddlerboybtn",
          "id": "shopper4",
          "selected": false,
          "value": "lbl_profile_survey_question2_option4",
        },
        Object {
          "dataLocator": "moreaboutyou-question-babybtn",
          "id": "shopper5",
          "selected": false,
          "value": "lbl_profile_survey_question2_option5",
        },
      ],
    }
  }
  labels={Object {}}
  onClose={[Function]}
  onSubmit={[Function]}
  setSurveyAnswersAction={[MockFunction]}
  successMessage="Success"
/>
`;
